Add env :sunrise_over_mountains:

--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -1,6 +1,10 @@
 services:
   tvheadend:
     build: .
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
     ports:
       - "9981:9981"
       - "9982:9982"
